--- a/instagram.html
+++ b/instagram.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/social.css">
-    <title>youtube</title>
+    <title>instagram</title>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram.jpg" alt="youtube">
+    <a href="https://www.instagram.com" target="_blank">ACESSE</a>
 </body>
 </html>
